--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	},
 	"homepage": "https://github.com/boo1ean/cnfg",
 	"dependencies": {
-		"lodash": "~2.4.1"
+		"lodash": "~2.4.1",
+		"walkdir": "0.0.7"
 	},
 	"keywords": [
 		"config",
