Commit for PR: - remove dependency on walkdir, which doesn't always behave as expected     due to its design around the assumption that filesystem inodes     always have unique identifiers when queried with node's fs module.     - this is not always true on certain filesystems, NTFS being a prime         example, where the inode number appears to be related to file         creation time, such that the output from a transpilation process         (such as typescript) can (and does) result in files with the         same inode number, resulting in some files not being reported         as existing when using walkdir (and hence some config files         being ignored by cnfg)         - the walkdir motivation appears to be to ignore multiple             hardlinks of the same file, which would be bad practice             for configuration and would, at any rate, simply result             in duplicated sections of configuration with different names - also added the ability to specify a selection of file extensions to   examine for loading, which makes cnfg useful under   transpile-on-the-fly environments like ts-node Minor changes: - all tests are replicated to prove the code working under ts-node - updated the test mechanism to not depend on Make

--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Hierarchical environment configuration for node.js applications",
   "main": "cnfg.js",
   "scripts": {
-    "test": "make test"
+    "prepublish": "test",
+    "test": "run-s test-js test-ts",
+    "test-js": "mocha -R spec test --recursive",
+    "test-ts": "mocha -R spec test-ts/**/*.spec.ts --require ts-node/register --recursive",
+    "autotest-ts": "mocha -R mocha-yar test-ts/**/*.spec.ts --require ts-node/register --recursive --watch --watch-extensions ts",
+    "autotest-js": "mocha -R mocha-yar test --recursive --watch",
+    "autotest": "run-p autotest-js autotest-ts",
+    "postinstall": "typings install"
   },
   "repository": "https://github.com/boo1ean/cnfg.git",
   "author": "Egor Gumenyuk <boo1ean0807@gmail.com>",
@@ -15,8 +22,7 @@
   "homepage": "https://github.com/boo1ean/cnfg",
   "dependencies": {
     "debug": "^2.2.0",
-    "lodash": "^4.6.1",
-    "walkdir": "0.0.7"
+    "lodash": "^4.6.1"
   },
   "keywords": [
     "config",
@@ -30,7 +36,12 @@
     "hierarchical"
   ],
   "devDependencies": {
-    "mocha": "~1.17.0",
-    "chai": "~1.8.1"
+    "chai": "~1.8.1",
+    "mocha": "^3.0.1",
+    "mocha-yar": "^1.0.10",
+    "npm-run-all": "^2.3.0",
+    "ts-node": "^1.2.2",
+    "typescript": "^1.8.10",
+    "typings": "^1.3.2"
   }
 }
