--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hierarchical environment configuration for node.js applications",
   "main": "cnfg.js",
   "scripts": {
-    "prepublish": "test",
+    "prepublish": "run-s test",
     "test": "run-s test-js test-ts",
     "test-js": "mocha -R spec test --recursive",
     "test-ts": "mocha -R spec test-ts/**/*.spec.ts --require ts-node/register --recursive",
